[package]
name = "yuugi"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.0.13", features = ["derive", "env"] }
env_logger = "0.9.0"
kagiyama = "0.3.0"
log = "0.4.17"
num_cpus = "1.13.1"
sysconf = "0.3.4"
sysinfo = "0.26.4"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
